--- a/LocationTracking/Podfile
+++ b/LocationTracking/Podfile
@@ -4,6 +4,7 @@
 target 'LocationTracking' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
+  	pod 'RappleProgressHUD'
 	pod 'GoogleMaps'
 	pod 'GooglePlaces'
 	pod 'Firebase', '>= 2.5.0'
