--- a/LocationTracking/LocationTracking/Info.plist
+++ b/LocationTracking/LocationTracking/Info.plist
@@ -34,6 +34,23 @@
 				<string>Beacon.LocationTracking</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb160414881182128</string>
+			</array>
+		</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>160414881182128</string>
+	<key>FacebookDisplayName</key>
+	<string>Location Share</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
