--- a/LocationTracking/LocationTracking/Info.plist
+++ b/LocationTracking/LocationTracking/Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.1</string>
+	<string>1.0.2</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -42,7 +42,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2.0.1</string>
+	<string>1.0.3</string>
 	<key>FacebookAppID</key>
 	<string>160414881182128</string>
 	<key>FacebookDisplayName</key>
@@ -60,6 +60,8 @@
 	<string>Used to change zoom level of the map.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Location need to updated</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Used to update profile</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
