--- a/LocationTracking/LocationTracking/Info.plist
+++ b/LocationTracking/LocationTracking/Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.2</string>
+	<string>1.1.0</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -42,7 +42,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.0.3</string>
+	<string>1.1</string>
 	<key>FacebookAppID</key>
 	<string>160414881182128</string>
 	<key>FacebookDisplayName</key>
@@ -57,13 +57,14 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>Used to change zoom level of the map.</string>
+	<string>Controls the camera, which defines how the map is oriented</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Update your location on map when you moving.</string>
+	<string>used to updating your location on map when you moving.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Used to update profile</string>
+	<string>used to choose picture for updating profile.</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>location</string>
 		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
